# celebration-days

./: .gitignore  Makefile  README.md  celebration-day.csv  schema.md
celebration-days/: README.md
celebration-days/data/: celebration-day.csv
celebration-days/src/: __init__.py  celebration_interface.py  main.py  utils.py
data/: celebration-day.csv  historical-figure.csv
python/: README.md  pyproject.toml
python/src/celebration_days/: __init__.py  celebration_interface.py  historical_interface.py  main.py
requirements/: dev-requirements.in  dev-requirements.txt  requirements.txt
schema/: historical-figure.schema.md
tests/: test_historical_figures.py  test_international_womens_day.py  test_world_afro_day.py
