[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celebration-days"
version = "0.1.0"
description = "Python interfaces for celebration and historical figure datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]
